<?xml version="1.0" encoding="utf-8"?>
<!-- Filnavn: res/layout/lekt01_tre_knapper.xml -->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/indhold"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff333399"
    android:padding="10dip">

    <ImageView
        android:id="@+id/ikon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dip"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/knap1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dip"
        android:text="En knap"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/knap2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dip"
        android:text="En anden knap"
        android:textSize="20sp" />

    <Button
        android:id="@+id/knap3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dip"
        android:text="En tredje knap"
        android:textSize="20sp" />

</TableLayout>
